# cleese

./: .gitignore  404.html  LICENSE  README.md  cleese-mediapipe.toml  cleese-phase-vocoder.toml  cleese-vanilla.toml  cleeseConfig_all.py  index.html  pyproject.toml  run_cleese.py  setup.cfg  setup.py  tutorial.ipynb  tutorial_audio.ipynb  tutorial_images.ipynb
.github/: version_update.yml
.github/workflows/: ci.yml  version_update.yml
about/: index.html
about-the-lab/about-our-operating-institutions/: index.html
about-the-lab/about-the-team-dept-and-institute/: index.html
about-the-lab/lab-history/: index.html
about-the-lab/lab-mission-and-focus/: index.html
about-the-lab/lab-philosophy-values/: index.html
about-the-lab/lab-space/: index.html
about-this-manual/how-to-update-the-manual/: index.html
about-this-manual/manual-metadata/: index.html
about-this-manual/why-igor/: index.html
about-this-manual/why-we-use-a-lab-manual/: index.html
api/face-warp/: index.html
api/general/: index.html
api/phase-vocoder/: index.html
assets/javascripts/: decrypt-contents.js
becoming-a-lab-member/femto-st-web-services/: index.html
cleese/: __init__.py  cleese.py  cleeseBPF.py  cleeseEngine.py  cleeseProcess.py
cleese_stim/: __init__.py  cleese.py
doc/: mkdocs.yml
doc/docs/: index.md
docs/: mkdocs.yml
downloads/: A3_sticker.pptx  Engagement_confidentialité.docx  ZRR_form.xlsm  consent_form_template.docx
installation/: index.html
leaving-the-lab/: index.html
search/: search_index.json
tutorial/: run_cleese.py  tutorial_images.ipynb
(+120 files in other folders)
