[metadata]
name = cleese_stim
version = attr: cleese_stim.__version__
description = Audio and visual stimuli generation tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sound manipulation, phase vocoder
license = MIT License
url = https://github.com/neuro-team-femto/cleese
project_urls =
    Bug Tracker = https://github.com/neuro-team-femto/cleese/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Sociology

[options]
zip_safe = False
packages = find:
install_requires =
    mediapipe
    msvc-runtime; platform_system == "Windows"
    numpy
    scipy
    tomli
